@@ -15,7 +15,7 @@ public class EnglishLangProvider extends FabricLanguageProvider {
         super(dataOutput, registryLookup);
     }
 
-    private final String autoConfigPrefix = String.format("text.autoconfig.%s.option", BrainageHUD.MOD_ID);
+    private final String autoConfigPrefix = "text.autoconfig.%s.option".formatted(BrainageHUD.MOD_ID);
 
     private void generateReflectedTranslations(Class<?> clazz, String baseKey, TranslationBuilder translationBuilder) {
         for (Field field : clazz.getFields()) {
@@ -31,12 +31,6 @@ public class EnglishLangProvider extends FabricLanguageProvider {
         }
     }
 
-    private void addAutoConfigTranslations(String[] keys, String[] values, String packageName, TranslationBuilder translationBuilder) {
-        for (int i = 0; i < keys.length; i++) {
-            translationBuilder.add("%s.%s.%s".formatted(autoConfigPrefix, packageName, keys[i]), values[i]);
-        }
-    }
-
     @SuppressWarnings("SameParameterValue")
     private void addAutomaticTranslations(String[] keys, String packageName, TranslationBuilder translationBuilder) {
         for (String key : keys) {
@@ -48,7 +42,7 @@ public class EnglishLangProvider extends FabricLanguageProvider {
     public void generateTranslations(RegistryWrapper.WrapperLookup registryLookup, TranslationBuilder translationBuilder) {
         // element editor
         translationBuilder.add(
-                String.format("text.autoconfig.%s.title", BrainageHUD.MOD_ID),
+                "text.autoconfig.%s.title".formatted(BrainageHUD.MOD_ID),
                 "BrainageHUD Config Editor"
         );
 
@@ -64,37 +58,5 @@ public class EnglishLangProvider extends FabricLanguageProvider {
 
         // config
         generateReflectedTranslations(ModConfig.class, autoConfigPrefix, translationBuilder);
-
-        addAutoConfigTranslations(
-                new String[]{
-                        "gamma.@Tooltip[0]",
-                        "gamma.@Tooltip[1]",
-                        "gamma.@Tooltip[2]",
-                        "gamma.@Tooltip[3]"
-                },
-                new String[]{
-                        "0.0: Minimum vanilla brightness.",
-                        "1.0: Maximum vanilla brightness.",
-                        "1.1 - 9.9: Very bright but lighting is still in effect.",
-                        "10.0: Fullbright."
-                },
-                "qualityOfLifeConfig",
-                translationBuilder
-        );
-
-        addAutoConfigTranslations(
-                new String[]{
-                        "showGpuUsage.@Tooltip[0]",
-                        "showGpuUsage.@Tooltip[1]",
-                        "showGpuUsage.@Tooltip[2]",
-                },
-                new String[]{
-                        "WARNING: This feature is currently broken.",
-                        "(GPU usage does not update unless the F3 screen is open)",
-                        "A fix for this will be implemented in the future."
-                },
-                "performanceHudConfig",
-                translationBuilder
-        );
     }
 }
