@@ -2,18 +2,17 @@ package io.github.brainage04.brainagehud.hud;
 
 import io.github.brainage04.brainagehud.config.hud.basic.DateTimeHudConfig;
 import io.github.brainage04.hudrendererlib.hud.core.BasicHudElement;
+import io.github.brainage04.hudrendererlib.util.TextList;
 
 import java.text.SimpleDateFormat;
-import java.util.ArrayList;
 import java.util.Date;
-import java.util.List;
 
 import static io.github.brainage04.brainagehud.util.ConfigUtils.getConfig;
 
 public class DateTimeHud implements BasicHudElement<DateTimeHudConfig> {
     @Override
-    public List<String> getLines() {
-        List<String> lines = new ArrayList<>(List.of());
+    public TextList getLines() {
+        TextList lines = new TextList();
 
         if (getElementConfig().showDate) {
             lines.add(new SimpleDateFormat("E dd MMM yyyy").format(new Date()));
@@ -32,13 +31,10 @@ public class DateTimeHud implements BasicHudElement<DateTimeHudConfig> {
         }
 
         if (getElementConfig().showTimezone) {
-            lines.add(
-                    String.format(
-                            "%s (UTC %s)",
-                            new SimpleDateFormat("z").format(new Date()),
-                            new SimpleDateFormat("XXX").format(new Date())
-                    )
-            );
+            lines.add("%s (UTC %s)".formatted(
+                    new SimpleDateFormat("z").format(new Date()),
+                    new SimpleDateFormat("XXX").format(new Date())
+            ));
         }
 
         return lines;
